發票群組單筆增加 suggested_items

--- a/docs/md/發票開立草案.md
+++ b/docs/md/發票開立草案.md
@@ -418,7 +418,7 @@ async function save() {
 - `tax_type`: 應稅
 - `tax_included`: 含稅
 - `invoice_items`: 預設發票項目
-- `suggest_items`: 訂單商品建議明細（如有訂單）
+- `suggested_invoice_items`: 訂單商品建議明細（如有訂單）
 - `buyer_name`: 買受人（如訂單有）
 - `tax_id_number`: 統編（如訂單有）
 
